--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,6 @@
         {% endif %}
     </title>
     <link rel="icon" href="{{ url_for('static', filename='images/website/favicon.ico') }}" type="image/x-icon">
-    <link href="https
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/profile.css') }}">
@@ -24,7 +23,7 @@
                 <button class="nav-toggle" id="nav-toggle" onclick="toggleNav()">&#9776;</button>
             </div>
             <div class="header-middle">
-                <img src="https
+                <img src="../static/images/website/steam_logo.png" alt="Steam Logo">
             </div>
             <div class="header-right"></div>
         </div>
