fixed redirecting to homepage ;

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
                 <button class="nav-toggle" id="nav-toggle" onclick="toggleNav()">&#9776;</button>
             </div>
             <div class="header-middle">
-                <img src="../static/images/website/steam_logo.png" alt="Steam Logo">
+                <a href="/"><img src="../static/images/website/steam_logo.png" alt="Steam Logo"></a>
             </div>
             <div class="header-right"></div>
         </div>
