--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="72XrUlF2olgl_pRnHgxj-ok4Ll_AFlankmc83z7LoIs" />
     <title>
         {% if 'username' in session %}
             Steam - {{ session['username'] }}
